MCR-2862 code clean-up (#1826)
* do not declare exceptions that are never thrown
* use "newer" java features
* mainly collection handling, lamda expressions, parsing primitives
* deprecated MCRXSLTransformation
* simplified code
* fix minor generics issues
* use String.repeat()
* use new switch expression
* use Java 16 instanceof pattern matching
* remove redundant code
* better handling of exceptions
* use records
* fix https://errorprone.info/bugpattern/YodaCondition
* prevent XML External Entity attacks
* use record for MCRPermissionHandle
* fix https://find-sec-bugs.github.io/bugs.htm#XXE_XMLSTREAMREADER
* clean-up javadocs
* remove usage of LinkedList
* make setTransformerFactory private
* simplified SingletonKey in MCRConfiguration